# rust-ping-website-student

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  LICENSE_MIT
client/www/: index.html  index.js  package-lock.json  package.json
migrations/2020-01-16-144347_create/: up.sql
server/: Cargo.toml  README.md
server/migrations/2020-01-16-144347_create/: down.sql  up.sql
server/src/: domain_ping_response_average.rs  main.rs  models.rs  ping.rs  ping_utility.rs  schema.rs
server/src/business/: mod.rs  ping_service.rs
server/src/database/: lib.rs  mod.rs  models.rs  schema.rs
server/templates/: base.html.tera
server/templates/domain_ping_response_average/: result.html.tera
src/: main.rs  schema.rs  sql.rs
templates/: average.html.tera  index.html.tera
